// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`published artifacts > dist/es/index.d.ts is unchanged 1`] = `
"import { Combiner, CreateSelectorFunction, CreateSelectorOptions, GetParamsFromSelectors, GetStateFromSelectors, OutputSelector, Selector, SelectorArray, SelectorResultsMap, SelectorsObject } from "@veksa/reselect";
//#region src/cache/types.d.ts
interface ICacheObject {
  set(key: any, selectorFn: any): void;
  get(key: any): any;
  remove(key: any): void;
  clear(): void;
  isValidCacheKey?(key: any): boolean;
}
type ObjectCacheKey = string | number;
//#endregion
//#region src/types.d.ts
/**
 * A function which takes the same arguments as the selector and returns a cacheKey.
 * The cacheKey is used to look up the matching reselect selector in the cache.
 */
type KeySelector<S> = (state: S, ...args: any[]) => any;
/**
 * keySelector type with parameters inferred from the parent selector's input selectors.
 * Used to give precise types to the user-supplied keySelector callback at call sites.
 *
 * \`KeyParams\` defaults to the input selectors' parameters, so an inline callback
 * that annotates nothing still gets them contextually. A keySelector that
 * declares its own arguments overrides that default: choosing the cache
 * instance is its job, and what it keys on need not be anything an input
 * selector reads.
 */
type TypedKeySelector<InputSelectors extends SelectorArray, KeyParams extends readonly any[] = GetParamsFromSelectors<InputSelectors>> = (state: GetStateFromSelectors<InputSelectors>, ...params: KeyParams) => unknown;
/**
 * Two argument lists, intersected position by position, keeping whichever runs
 * longer — the same rule reselect applies across input selectors.
 *
 * Either side can be something other than a tuple: \`GetParamsFromSelectors\`
 * yields \`never\` for an empty input list and \`any[]\` for an unbounded one, and
 * neither may leak into the merged result, or the selector ends up with
 * arguments nothing can satisfy.
 */
type MergeArgs<Left extends readonly any[], Right extends readonly any[]> = [Left] extends [never] ? Right : [Right] extends [never] ? Left : Left extends readonly [infer LeftHead, ...infer LeftTail] ? Right extends readonly [infer RightHead, ...infer RightTail] ? [LeftHead & RightHead, ...MergeArgs<LeftTail, RightTail>] : Left : Right;
/**
 * The arguments a cached selector accepts: the ones its input selectors declare
 * plus the ones its keySelector declares.
 */
type CachedSelectorParams<InputSelectors extends SelectorArray, KeyParams extends readonly any[]> = MergeArgs<GetParamsFromSelectors<InputSelectors>, KeyParams>;
/**
 * A function which receives the selector's inputSelectors/resultFunc/keySelector
 * and returns the keySelector to be used at runtime.
 */
type KeySelectorCreator<InputSelectors extends SelectorArray, Result, KeyParams extends readonly any[] = GetParamsFromSelectors<InputSelectors>> = (selectorInputs: {
  inputSelectors: InputSelectors;
  resultFunc: Combiner<InputSelectors, Result>;
  keySelector?: TypedKeySelector<InputSelectors, KeyParams>;
}) => TypedKeySelector<InputSelectors, KeyParams>;
type CreateCachedSelectorOptions<InputSelectors extends SelectorArray, Result, KeyParams extends readonly any[] = GetParamsFromSelectors<InputSelectors>> = {
  keySelector?: TypedKeySelector<InputSelectors, KeyParams>;
  cacheObject?: ICacheObject;
  selectorCreator?: CreateSelectorFunction<any, any, any>;
  keySelectorCreator?: KeySelectorCreator<InputSelectors, Result, KeyParams>;
};
/**
 * The selector instance returned by \`createCachedSelector(...)(...)\`.
 *
 * This type is reconstructed from a plain reselect \`Selector\` plus **only** the
 * members re-reselect actually attaches at runtime (see
 * \`createCachedSelector.ts\`'s \`Object.assign\`). It intentionally does **not**
 * inherit reselect's full \`OutputSelector\`: that would advertise members which
 * only exist on the inner, per-cache-key reselect selectors (\`memoizedResultFunc\`,
 * \`lastResult\`, \`dependencyRecomputations\`, \`resetDependencyRecomputations\`,
 * \`memoize\`, \`argsMemoize\`, …) — they are absent on the cached selector at
 * runtime, so surfacing them would type-check and then crash.
 *
 * \`getMatchingSelector\` returns the full \`OutputSelector\` because the inner
 * cached selector genuinely is a reselect selector.
 *
 * The call signature carries {@link CachedSelectorParams} while the fields
 * still describe the input selectors alone — \`resultFunc\` takes the inputs'
 * results, and the keySelector contributes none.
 *
 * \`.keySelector\` is exposed using the loose \`KeySelector<State>\` shape rather
 * than the precise \`TypedKeySelector<InputSelectors>\` for back-compat with
 * consumers that test the type against \`KeySelector<State>\`.
 */
type OutputCachedSelector<InputSelectors extends SelectorArray, Result, KeyParams extends readonly any[] = GetParamsFromSelectors<InputSelectors>> = Selector<GetStateFromSelectors<InputSelectors>, Result, CachedSelectorParams<InputSelectors, KeyParams>> & Pick<OutputSelector<InputSelectors, Result>, 'resultFunc' | 'dependencies' | 'recomputations' | 'resetRecomputations'> & {
  getMatchingSelector: (state: GetStateFromSelectors<InputSelectors>, ...params: CachedSelectorParams<InputSelectors, KeyParams>) => OutputSelector<InputSelectors, Result>;
  removeMatchingSelector: (state: GetStateFromSelectors<InputSelectors>, ...params: CachedSelectorParams<InputSelectors, KeyParams>) => void;
  clearCache: () => void;
  cache: ICacheObject;
  keySelector: KeySelector<GetStateFromSelectors<InputSelectors>>;
};
/**
 * The curried second-call argument: a \`keySelector\` function or an options object.
 */
type PolymorphicCachedOptions<InputSelectors extends SelectorArray, Result, KeyParams extends readonly any[] = GetParamsFromSelectors<InputSelectors>> = TypedKeySelector<InputSelectors, KeyParams> | CreateCachedSelectorOptions<InputSelectors, Result, KeyParams>;
/**
 * Just the callable signatures of \`createCachedSelector\`, without \`withTypes\`.
 * Split out so the runtime implementation can be typed against it directly
 * (TypeScript's \`Omit\` strips call signatures, so this can't be derived from
 * \`CreateCachedSelector\` after the fact).
 *
 * Three overloads (variadic, variadic+options, array+options) using tuple
 * inference instead of per-arity overload duplication, mirroring reselect's
 * \`CreateSelectorFunction\` pattern.
 *
 * \`StateType\` is the state type shared by all input selectors. It defaults to
 * \`any\` and is narrowed via \`withTypes\` to pre-type the selector creator.
 *
 * The curried call is generic in \`KeyParams\` so a keySelector that declares its
 * own arguments widens the resulting selector instead of being rejected.
 */
interface CreateCachedSelectorImpl<StateType = any> {
  <InputSelectors extends SelectorArray<StateType>, Result>(...createSelectorArgs: [...inputSelectors: InputSelectors, combiner: Combiner<InputSelectors, Result>]): <KeyParams extends readonly any[] = GetParamsFromSelectors<InputSelectors>>(polymorphicOptions: PolymorphicCachedOptions<InputSelectors, Result, KeyParams>) => OutputCachedSelector<InputSelectors, Result, KeyParams>;
  <InputSelectors extends SelectorArray<StateType>, Result>(...createSelectorArgs: [...inputSelectors: InputSelectors, combiner: Combiner<InputSelectors, Result>, createSelectorOptions: CreateSelectorOptions]): <KeyParams extends readonly any[] = GetParamsFromSelectors<InputSelectors>>(polymorphicOptions: PolymorphicCachedOptions<InputSelectors, Result, KeyParams>) => OutputCachedSelector<InputSelectors, Result, KeyParams>;
  <InputSelectors extends SelectorArray<StateType>, Result>(inputSelectors: [...InputSelectors], combiner: Combiner<InputSelectors, Result>, createSelectorOptions?: CreateSelectorOptions): <KeyParams extends readonly any[] = GetParamsFromSelectors<InputSelectors>>(polymorphicOptions: PolymorphicCachedOptions<InputSelectors, Result, KeyParams>) => OutputCachedSelector<InputSelectors, Result, KeyParams>;
}
/**
 * The full \`createCachedSelector\` surface: callable signatures plus the
 * \`withTypes\` helper for pre-typing the state.
 */
interface CreateCachedSelector<StateType = any> extends CreateCachedSelectorImpl<StateType> {
  /**
   * Creates a "pre-typed" version of \`createCachedSelector\` where the \`state\`
   * type is predefined.
   *
   * This lets you set the \`state\` type once, removing the need to specify it
   * on every input selector across all \`createCachedSelector\` calls.
   *
   * @returns A pre-typed \`createCachedSelector\` with the state type baked in.
   */
  withTypes: <OverrideStateType extends StateType>() => CreateCachedSelector<OverrideStateType>;
}
//#endregion
//#region src/createCachedSelector.d.ts
declare const createCachedSelector: CreateCachedSelector;
//#endregion
//#region src/typeUtils.d.ts
/**
 * Distributes a union \`A | B | C\` into an intersection \`A & B & C\` by exploiting
 * contravariance of function parameters. Building block for {@link LastOf}.
 */
type UnionToIntersection<Union> = (Union extends unknown ? (distributedUnion: Union) => void : never) extends ((mergedIntersection: infer Intersection) => void) ? Intersection : never;
/**
 * Extracts the "last" member of a union. Order is an implementation detail of
 * the compiler's overload resolution, but it is stable, which is all
 * {@link TuplifyUnion} needs to peel members off one at a time.
 */
type LastOf<T> = UnionToIntersection<T extends any ? () => T : never> extends (() => infer R) ? R : never;
/**
 * Converts a union \`A | B | C\` into a tuple \`[A, B, C]\` by repeatedly pulling
 * off {@link LastOf} and excluding it until the union is \`never\`.
 */
type TuplifyUnion<T, L = LastOf<T>, N = [T] extends [never] ? true : false> = true extends N ? [] : [...TuplifyUnion<Exclude<T, L>>, L];
/**
 * Type-level \`Object.values()\`: converts a SelectorsObject
 * \`{ foo: Selector, bar: Selector }\` into the ordered tuple
 * \`[Selector, Selector]\` that reselect's \`MergeParameters\` needs to infer
 * state and params. An unordered \`Array<T[keyof T]>\` collapses the selectors
 * to a union and loses per-position params (second args resolve to \`never\`),
 * so a real tuple is required. Mirrors reselect's internal
 * \`ObjectValuesToTuple\` (not exported from the package).
 */
type SelectorsObjectToTuple<T extends SelectorsObject<any>, KS extends any[] = TuplifyUnion<keyof T>, R extends Selector[] = []> = KS extends [infer K, ...infer KT] ? SelectorsObjectToTuple<T, KT, [...R, T[K & keyof T]]> : R;
//#endregion
//#region src/createStructuredCachedSelector.d.ts
/**
 * The returned thunk preserves the cached-selector public surface
 * (\`getMatchingSelector\`, \`removeMatchingSelector\`, \`clearCache\`, \`cache\`,
 * \`keySelector\`, plus reselect's \`OutputSelector\` fields) and exposes
 * the structured shape as the selector's \`Result\`.
 */
type StructuredCachedSelector<InputSelectorsObject extends SelectorsObject<any>> = (polymorphicOptions: PolymorphicCachedOptions<SelectorsObjectToTuple<InputSelectorsObject>, SelectorResultsMap<InputSelectorsObject>>) => OutputCachedSelector<SelectorsObjectToTuple<InputSelectorsObject>, SelectorResultsMap<InputSelectorsObject>>;
declare function createStructuredCachedSelector<InputSelectorsObject extends SelectorsObject<any>>(selectors: InputSelectorsObject): StructuredCachedSelector<InputSelectorsObject>;
//#endregion
//#region src/cache/FlatObjectCache.d.ts
declare class FlatObjectCache implements ICacheObject {
  private _cache;
  set(key: ObjectCacheKey, selectorFn: any): void;
  get(key: ObjectCacheKey): any;
  remove(key: ObjectCacheKey): void;
  clear(): void;
  isValidCacheKey(cacheKey: ObjectCacheKey): boolean;
}
//#endregion
//#region src/cache/FifoObjectCache.d.ts
declare class FifoObjectCache implements ICacheObject {
  private _cache;
  private _cacheOrdering;
  private _cacheSize;
  constructor(options: {
    cacheSize: number;
  });
  set(key: ObjectCacheKey, selectorFn: any): void;
  get(key: ObjectCacheKey): any;
  remove(key: ObjectCacheKey): void;
  clear(): void;
  isValidCacheKey(cacheKey: ObjectCacheKey): boolean;
}
//#endregion
//#region src/cache/LruObjectCache.d.ts
declare class LruObjectCache implements ICacheObject {
  private _cache;
  private _cacheOrdering;
  private _cacheSize;
  constructor(options: {
    cacheSize: number;
  });
  set(key: ObjectCacheKey, selectorFn: any): void;
  get(key: ObjectCacheKey): any;
  remove(key: ObjectCacheKey): void;
  clear(): void;
  isValidCacheKey(cacheKey: ObjectCacheKey): boolean;
  private _registerCacheHit;
  private _deleteCacheHit;
}
//#endregion
//#region src/cache/FlatMapCache.d.ts
declare class FlatMapCache implements ICacheObject {
  private _cache;
  set(key: any, selectorFn: any): void;
  get(key: any): any;
  remove(key: any): void;
  clear(): void;
}
//#endregion
//#region src/cache/FifoMapCache.d.ts
declare class FifoMapCache implements ICacheObject {
  private _cache;
  private _cacheSize;
  constructor(options: {
    cacheSize: number;
  });
  set(key: any, selectorFn: any): void;
  get(key: any): any;
  remove(key: any): void;
  clear(): void;
}
//#endregion
//#region src/cache/LruMapCache.d.ts
declare class LruMapCache implements ICacheObject {
  private _cache;
  private _cacheSize;
  constructor(options: {
    cacheSize: number;
  });
  set(key: any, selectorFn: any): void;
  get(key: any): any;
  remove(key: any): void;
  clear(): void;
}
//#endregion
export { type CachedSelectorParams, type CreateCachedSelector, type CreateCachedSelectorOptions, FifoMapCache, FifoObjectCache, FlatMapCache, FlatObjectCache, type ICacheObject, type KeySelector, type KeySelectorCreator, LruMapCache, LruObjectCache, type OutputCachedSelector, type TypedKeySelector, createCachedSelector, createStructuredCachedSelector };
//# sourceMappingURL=index.d.ts.map"
`;

exports[`published artifacts > dist/es/index.legacy-esm.js is unchanged 1`] = `
"import { createSelector, createStructuredSelector, lruMemoize } from "@veksa/reselect";
//#region src/cache/util/isStringOrNumber.ts
function isStringOrNumber(value) {
	return typeof value === "string" || typeof value === "number";
}
//#endregion
//#region src/cache/FlatObjectCache.ts
var FlatObjectCache = class {
	constructor() {
		this._cache = {};
	}
	set(key, selectorFn) {
		this._cache[key] = selectorFn;
	}
	get(key) {
		return this._cache[key];
	}
	remove(key) {
		delete this._cache[key];
	}
	clear() {
		this._cache = {};
	}
	isValidCacheKey(cacheKey) {
		return isStringOrNumber(cacheKey);
	}
};
//#endregion
//#region src/createCachedSelector.ts
function isFunction(value) {
	return typeof value === "function";
}
function parseReselectArgs(reselectArgs) {
	const args = [...reselectArgs];
	const last = args.pop();
	let resultFunc;
	let createSelectorOptions;
	if (isFunction(last)) {
		resultFunc = last;
		createSelectorOptions = void 0;
	} else {
		resultFunc = args.pop();
		createSelectorOptions = last;
	}
	return {
		inputSelectors: Array.isArray(args[0]) ? args[0] : args,
		resultFunc,
		createSelectorOptions
	};
}
const createCachedSelectorImpl = ((...reselectArgs) => {
	const { inputSelectors, resultFunc, createSelectorOptions } = parseReselectArgs(reselectArgs);
	return (polymorphicOptions) => {
		var _options$cacheObject, _options$selectorCrea;
		const options = isFunction(polymorphicOptions) ? { keySelector: polymorphicOptions } : { ...polymorphicOptions };
		let recomputations = 0;
		const resultFuncWithRecomputations = (...args) => {
			recomputations++;
			return resultFunc(...args);
		};
		/**
		* Instances default to a size-1 argument cache rather than reselect's
		* \`weakMapMemoize\`.
		*
		* A cached selector has already chosen the instance by key before calling it, so
		* the instance sees one argument shape and needs no cache of its own beyond the
		* previous call. \`weakMapMemoize\` instead keys on the argument list, and the
		* first of those arguments is the state — which a store replaces on every write,
		* so the lookup misses every time and allocates a node to record the miss. What
		* makes the result reusable is the memoization on *input values* below it, and
		* that is untouched: recomputation counts do not change.
		*
		* \`createSelectorOptions\` is spread last, so a caller who wants the previous
		* behaviour passes \`argsMemoize\` explicitly and gets it.
		*/
		const patchedReselectArgs = [
			inputSelectors,
			resultFuncWithRecomputations,
			{
				argsMemoize: lruMemoize,
				...createSelectorOptions
			}
		];
		const cache = (_options$cacheObject = options.cacheObject) !== null && _options$cacheObject !== void 0 ? _options$cacheObject : new FlatObjectCache();
		const selectorCreator = (_options$selectorCrea = options.selectorCreator) !== null && _options$selectorCrea !== void 0 ? _options$selectorCrea : createSelector;
		if (options.keySelectorCreator) options.keySelector = options.keySelectorCreator({
			keySelector: options.keySelector,
			inputSelectors,
			resultFunc
		});
		if (!isFunction(options.keySelector)) throw new Error("[re-reselect] Missing \\"keySelector\\": provide a \`keySelector\` function or a \`keySelectorCreator\` that returns one.");
		const keySelector = options.keySelector;
		/**
		* Selectors are reached as \`(state)\` or \`(state, props)\` in all but exotic
		* cases, and those two arities are dispatched directly.
		*
		* A rest parameter allocates an array on every call, and forwarding it costs a
		* spread at each of the two call sites below — all of it paid on a cache hit,
		* which is what the overwhelming majority of calls are. The arity is matched
		* exactly rather than always forwarding two arguments, because reselect memoizes
		* on the argument list and handing a one-argument selector a second \`undefined\`
		* would change its cache key.
		*/
		function selector(state, props) {
			const argumentCount = arguments.length;
			const cacheKey = argumentCount === 2 ? keySelector(state, props) : argumentCount === 1 ? keySelector(state) : keySelector.apply(null, arguments);
			if (cache.isValidCacheKey !== void 0 && !cache.isValidCacheKey(cacheKey)) {
				console.warn(\`[re-reselect] Invalid cache key "\${String(cacheKey)}" has been returned by keySelector function.\`);
				return;
			}
			let cacheResponse = cache.get(cacheKey);
			if (!cacheResponse) {
				cacheResponse = selectorCreator(...patchedReselectArgs);
				cache.set(cacheKey, cacheResponse);
			}
			return argumentCount === 2 ? cacheResponse(state, props) : argumentCount === 1 ? cacheResponse(state) : cacheResponse.apply(null, arguments);
		}
		return Object.assign(selector, {
			getMatchingSelector: (...args) => {
				const cacheKey = keySelector(...args);
				return cache.get(cacheKey);
			},
			removeMatchingSelector: (...args) => {
				const cacheKey = keySelector(...args);
				cache.remove(cacheKey);
			},
			clearCache: () => {
				cache.clear();
			},
			resultFunc,
			dependencies: inputSelectors,
			cache,
			recomputations: () => recomputations,
			resetRecomputations: () => {
				recomputations = 0;
			},
			keySelector
		});
	};
});
const createCachedSelector = Object.assign(createCachedSelectorImpl, { withTypes: () => createCachedSelector });
//#endregion
//#region src/createStructuredCachedSelector.ts
function createStructuredCachedSelector(selectors) {
	return createStructuredSelector(selectors, createCachedSelector);
}
//#endregion
//#region src/cache/util/validateCacheSize.ts
function validateCacheSize(cacheSize) {
	if (cacheSize === void 0) throw new Error("Missing the required property \\"cacheSize\\".");
	if (!Number.isInteger(cacheSize) || cacheSize <= 0) throw new Error("The \\"cacheSize\\" property must be a positive integer value.");
}
//#endregion
//#region src/cache/FifoObjectCache.ts
var FifoObjectCache = class {
	constructor(options) {
		this._cache = {};
		this._cacheOrdering = [];
		validateCacheSize(options === null || options === void 0 ? void 0 : options.cacheSize);
		this._cacheSize = options.cacheSize;
	}
	set(key, selectorFn) {
		this._cache[key] = selectorFn;
		this._cacheOrdering.push(key);
		if (this._cacheOrdering.length > this._cacheSize) {
			const earliest = this._cacheOrdering[0];
			this.remove(earliest);
		}
	}
	get(key) {
		return this._cache[key];
	}
	remove(key) {
		const index = this._cacheOrdering.indexOf(key);
		if (index > -1) this._cacheOrdering.splice(index, 1);
		delete this._cache[key];
	}
	clear() {
		this._cache = {};
		this._cacheOrdering = [];
	}
	isValidCacheKey(cacheKey) {
		return isStringOrNumber(cacheKey);
	}
};
//#endregion
//#region src/cache/LruObjectCache.ts
var LruObjectCache = class {
	constructor(options) {
		this._cache = {};
		this._cacheOrdering = [];
		validateCacheSize(options === null || options === void 0 ? void 0 : options.cacheSize);
		this._cacheSize = options.cacheSize;
	}
	set(key, selectorFn) {
		this._cache[key] = selectorFn;
		this._registerCacheHit(key);
		if (this._cacheOrdering.length > this._cacheSize) {
			const earliest = this._cacheOrdering[0];
			this.remove(earliest);
		}
	}
	get(key) {
		this._registerCacheHit(key);
		return this._cache[key];
	}
	remove(key) {
		this._deleteCacheHit(key);
		delete this._cache[key];
	}
	clear() {
		this._cache = {};
		this._cacheOrdering = [];
	}
	isValidCacheKey(cacheKey) {
		return isStringOrNumber(cacheKey);
	}
	_registerCacheHit(key) {
		this._deleteCacheHit(key);
		this._cacheOrdering.push(key);
	}
	_deleteCacheHit(key) {
		const index = this._cacheOrdering.indexOf(key);
		if (index > -1) this._cacheOrdering.splice(index, 1);
	}
};
//#endregion
//#region src/cache/FlatMapCache.ts
var FlatMapCache = class {
	constructor() {
		this._cache = /* @__PURE__ */ new Map();
	}
	set(key, selectorFn) {
		this._cache.set(key, selectorFn);
	}
	get(key) {
		return this._cache.get(key);
	}
	remove(key) {
		this._cache.delete(key);
	}
	clear() {
		this._cache.clear();
	}
};
//#endregion
//#region src/cache/FifoMapCache.ts
var FifoMapCache = class {
	constructor(options) {
		this._cache = /* @__PURE__ */ new Map();
		validateCacheSize(options === null || options === void 0 ? void 0 : options.cacheSize);
		this._cacheSize = options.cacheSize;
	}
	set(key, selectorFn) {
		this._cache.set(key, selectorFn);
		if (this._cache.size > this._cacheSize) {
			const earliest = this._cache.keys().next().value;
			this.remove(earliest);
		}
	}
	get(key) {
		return this._cache.get(key);
	}
	remove(key) {
		this._cache.delete(key);
	}
	clear() {
		this._cache.clear();
	}
};
//#endregion
//#region src/cache/LruMapCache.ts
var LruMapCache = class {
	constructor(options) {
		this._cache = /* @__PURE__ */ new Map();
		validateCacheSize(options === null || options === void 0 ? void 0 : options.cacheSize);
		this._cacheSize = options.cacheSize;
	}
	set(key, selectorFn) {
		this._cache.set(key, selectorFn);
		if (this._cache.size > this._cacheSize) {
			const earliest = this._cache.keys().next().value;
			this.remove(earliest);
		}
	}
	get(key) {
		const value = this._cache.get(key);
		if (this._cache.has(key)) {
			this.remove(key);
			this._cache.set(key, value);
		}
		return value;
	}
	remove(key) {
		this._cache.delete(key);
	}
	clear() {
		this._cache.clear();
	}
};
//#endregion
export { FifoMapCache, FifoObjectCache, FlatMapCache, FlatObjectCache, LruMapCache, LruObjectCache, createCachedSelector, createStructuredCachedSelector };

//# sourceMappingURL=index.legacy-esm.js.map"
`;

exports[`published artifacts > dist/umd/index.umd.js is unchanged 1`] = `
"(function(global, factory) {
	typeof exports === "object" && typeof module !== "undefined" ? factory(exports, require("@veksa/reselect")) : typeof define === "function" && define.amd ? define(["exports", "@veksa/reselect"], factory) : (global = typeof globalThis !== "undefined" ? globalThis : global || self, factory(global["Re-reselect"] = {}, global.reselect));
})(this, function(exports, _veksa_reselect) {
	Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
	//#region src/cache/util/isStringOrNumber.ts
	function isStringOrNumber(value) {
		return typeof value === "string" || typeof value === "number";
	}
	//#endregion
	//#region src/cache/FlatObjectCache.ts
	var FlatObjectCache = class {
		constructor() {
			this._cache = {};
		}
		set(key, selectorFn) {
			this._cache[key] = selectorFn;
		}
		get(key) {
			return this._cache[key];
		}
		remove(key) {
			delete this._cache[key];
		}
		clear() {
			this._cache = {};
		}
		isValidCacheKey(cacheKey) {
			return isStringOrNumber(cacheKey);
		}
	};
	//#endregion
	//#region src/createCachedSelector.ts
	function isFunction(value) {
		return typeof value === "function";
	}
	function parseReselectArgs(reselectArgs) {
		const args = [...reselectArgs];
		const last = args.pop();
		let resultFunc;
		let createSelectorOptions;
		if (isFunction(last)) {
			resultFunc = last;
			createSelectorOptions = void 0;
		} else {
			resultFunc = args.pop();
			createSelectorOptions = last;
		}
		return {
			inputSelectors: Array.isArray(args[0]) ? args[0] : args,
			resultFunc,
			createSelectorOptions
		};
	}
	const createCachedSelectorImpl = ((...reselectArgs) => {
		const { inputSelectors, resultFunc, createSelectorOptions } = parseReselectArgs(reselectArgs);
		return (polymorphicOptions) => {
			var _options$cacheObject, _options$selectorCrea;
			const options = isFunction(polymorphicOptions) ? { keySelector: polymorphicOptions } : { ...polymorphicOptions };
			let recomputations = 0;
			const resultFuncWithRecomputations = (...args) => {
				recomputations++;
				return resultFunc(...args);
			};
			/**
			* Instances default to a size-1 argument cache rather than reselect's
			* \`weakMapMemoize\`.
			*
			* A cached selector has already chosen the instance by key before calling it, so
			* the instance sees one argument shape and needs no cache of its own beyond the
			* previous call. \`weakMapMemoize\` instead keys on the argument list, and the
			* first of those arguments is the state — which a store replaces on every write,
			* so the lookup misses every time and allocates a node to record the miss. What
			* makes the result reusable is the memoization on *input values* below it, and
			* that is untouched: recomputation counts do not change.
			*
			* \`createSelectorOptions\` is spread last, so a caller who wants the previous
			* behaviour passes \`argsMemoize\` explicitly and gets it.
			*/
			const patchedReselectArgs = [
				inputSelectors,
				resultFuncWithRecomputations,
				{
					argsMemoize: _veksa_reselect.lruMemoize,
					...createSelectorOptions
				}
			];
			const cache = (_options$cacheObject = options.cacheObject) !== null && _options$cacheObject !== void 0 ? _options$cacheObject : new FlatObjectCache();
			const selectorCreator = (_options$selectorCrea = options.selectorCreator) !== null && _options$selectorCrea !== void 0 ? _options$selectorCrea : _veksa_reselect.createSelector;
			if (options.keySelectorCreator) options.keySelector = options.keySelectorCreator({
				keySelector: options.keySelector,
				inputSelectors,
				resultFunc
			});
			if (!isFunction(options.keySelector)) throw new Error("[re-reselect] Missing \\"keySelector\\": provide a \`keySelector\` function or a \`keySelectorCreator\` that returns one.");
			const keySelector = options.keySelector;
			/**
			* Selectors are reached as \`(state)\` or \`(state, props)\` in all but exotic
			* cases, and those two arities are dispatched directly.
			*
			* A rest parameter allocates an array on every call, and forwarding it costs a
			* spread at each of the two call sites below — all of it paid on a cache hit,
			* which is what the overwhelming majority of calls are. The arity is matched
			* exactly rather than always forwarding two arguments, because reselect memoizes
			* on the argument list and handing a one-argument selector a second \`undefined\`
			* would change its cache key.
			*/
			function selector(state, props) {
				const argumentCount = arguments.length;
				const cacheKey = argumentCount === 2 ? keySelector(state, props) : argumentCount === 1 ? keySelector(state) : keySelector.apply(null, arguments);
				if (cache.isValidCacheKey !== void 0 && !cache.isValidCacheKey(cacheKey)) {
					console.warn(\`[re-reselect] Invalid cache key "\${String(cacheKey)}" has been returned by keySelector function.\`);
					return;
				}
				let cacheResponse = cache.get(cacheKey);
				if (!cacheResponse) {
					cacheResponse = selectorCreator(...patchedReselectArgs);
					cache.set(cacheKey, cacheResponse);
				}
				return argumentCount === 2 ? cacheResponse(state, props) : argumentCount === 1 ? cacheResponse(state) : cacheResponse.apply(null, arguments);
			}
			return Object.assign(selector, {
				getMatchingSelector: (...args) => {
					const cacheKey = keySelector(...args);
					return cache.get(cacheKey);
				},
				removeMatchingSelector: (...args) => {
					const cacheKey = keySelector(...args);
					cache.remove(cacheKey);
				},
				clearCache: () => {
					cache.clear();
				},
				resultFunc,
				dependencies: inputSelectors,
				cache,
				recomputations: () => recomputations,
				resetRecomputations: () => {
					recomputations = 0;
				},
				keySelector
			});
		};
	});
	const createCachedSelector = Object.assign(createCachedSelectorImpl, { withTypes: () => createCachedSelector });
	//#endregion
	//#region src/createStructuredCachedSelector.ts
	function createStructuredCachedSelector(selectors) {
		return (0, _veksa_reselect.createStructuredSelector)(selectors, createCachedSelector);
	}
	//#endregion
	//#region src/cache/util/validateCacheSize.ts
	function validateCacheSize(cacheSize) {
		if (cacheSize === void 0) throw new Error("Missing the required property \\"cacheSize\\".");
		if (!Number.isInteger(cacheSize) || cacheSize <= 0) throw new Error("The \\"cacheSize\\" property must be a positive integer value.");
	}
	//#endregion
	//#region src/cache/FifoObjectCache.ts
	var FifoObjectCache = class {
		constructor(options) {
			this._cache = {};
			this._cacheOrdering = [];
			validateCacheSize(options === null || options === void 0 ? void 0 : options.cacheSize);
			this._cacheSize = options.cacheSize;
		}
		set(key, selectorFn) {
			this._cache[key] = selectorFn;
			this._cacheOrdering.push(key);
			if (this._cacheOrdering.length > this._cacheSize) {
				const earliest = this._cacheOrdering[0];
				this.remove(earliest);
			}
		}
		get(key) {
			return this._cache[key];
		}
		remove(key) {
			const index = this._cacheOrdering.indexOf(key);
			if (index > -1) this._cacheOrdering.splice(index, 1);
			delete this._cache[key];
		}
		clear() {
			this._cache = {};
			this._cacheOrdering = [];
		}
		isValidCacheKey(cacheKey) {
			return isStringOrNumber(cacheKey);
		}
	};
	//#endregion
	//#region src/cache/LruObjectCache.ts
	var LruObjectCache = class {
		constructor(options) {
			this._cache = {};
			this._cacheOrdering = [];
			validateCacheSize(options === null || options === void 0 ? void 0 : options.cacheSize);
			this._cacheSize = options.cacheSize;
		}
		set(key, selectorFn) {
			this._cache[key] = selectorFn;
			this._registerCacheHit(key);
			if (this._cacheOrdering.length > this._cacheSize) {
				const earliest = this._cacheOrdering[0];
				this.remove(earliest);
			}
		}
		get(key) {
			this._registerCacheHit(key);
			return this._cache[key];
		}
		remove(key) {
			this._deleteCacheHit(key);
			delete this._cache[key];
		}
		clear() {
			this._cache = {};
			this._cacheOrdering = [];
		}
		isValidCacheKey(cacheKey) {
			return isStringOrNumber(cacheKey);
		}
		_registerCacheHit(key) {
			this._deleteCacheHit(key);
			this._cacheOrdering.push(key);
		}
		_deleteCacheHit(key) {
			const index = this._cacheOrdering.indexOf(key);
			if (index > -1) this._cacheOrdering.splice(index, 1);
		}
	};
	//#endregion
	//#region src/cache/FlatMapCache.ts
	var FlatMapCache = class {
		constructor() {
			this._cache = /* @__PURE__ */ new Map();
		}
		set(key, selectorFn) {
			this._cache.set(key, selectorFn);
		}
		get(key) {
			return this._cache.get(key);
		}
		remove(key) {
			this._cache.delete(key);
		}
		clear() {
			this._cache.clear();
		}
	};
	//#endregion
	//#region src/cache/FifoMapCache.ts
	var FifoMapCache = class {
		constructor(options) {
			this._cache = /* @__PURE__ */ new Map();
			validateCacheSize(options === null || options === void 0 ? void 0 : options.cacheSize);
			this._cacheSize = options.cacheSize;
		}
		set(key, selectorFn) {
			this._cache.set(key, selectorFn);
			if (this._cache.size > this._cacheSize) {
				const earliest = this._cache.keys().next().value;
				this.remove(earliest);
			}
		}
		get(key) {
			return this._cache.get(key);
		}
		remove(key) {
			this._cache.delete(key);
		}
		clear() {
			this._cache.clear();
		}
	};
	//#endregion
	//#region src/cache/LruMapCache.ts
	var LruMapCache = class {
		constructor(options) {
			this._cache = /* @__PURE__ */ new Map();
			validateCacheSize(options === null || options === void 0 ? void 0 : options.cacheSize);
			this._cacheSize = options.cacheSize;
		}
		set(key, selectorFn) {
			this._cache.set(key, selectorFn);
			if (this._cache.size > this._cacheSize) {
				const earliest = this._cache.keys().next().value;
				this.remove(earliest);
			}
		}
		get(key) {
			const value = this._cache.get(key);
			if (this._cache.has(key)) {
				this.remove(key);
				this._cache.set(key, value);
			}
			return value;
		}
		remove(key) {
			this._cache.delete(key);
		}
		clear() {
			this._cache.clear();
		}
	};
	//#endregion
	exports.FifoMapCache = FifoMapCache;
	exports.FifoObjectCache = FifoObjectCache;
	exports.FlatMapCache = FlatMapCache;
	exports.FlatObjectCache = FlatObjectCache;
	exports.LruMapCache = LruMapCache;
	exports.LruObjectCache = LruObjectCache;
	exports.createCachedSelector = createCachedSelector;
	exports.createStructuredCachedSelector = createStructuredCachedSelector;
});

//# sourceMappingURL=index.umd.js.map"
`;
